--- a/form/form.html
+++ b/form/form.html
@@ -6,7 +6,7 @@
     <title>Chandra IDOLA - Profil</title>
 
     <link rel="stylesheet" href="../src/scroll_nav.css">
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="../src/styles.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
       rel="stylesheet"
