--- a/table/table.html
+++ b/table/table.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../src/scroll_nav.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="../src/styles.css">
     
     <style>
 
