--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <!-- Logo and Brand Name -->
           <a class="navbar-brand" href="index.html">
             <img
-              src="/public/logo.png"
+              src="public/logo.png"
               alt="Logo"
               width="90"
               height="70"
@@ -82,11 +82,11 @@
             <div
               id="jumbo"
               class="bg-image p-5 text-center shadow rounded mb-2 text-white row"
-              style="background-image: url('/public/jumbotron1.jpg')"
+              style="background-image: url('public/jumbotron1.jpg')"
             >
               <div class="col-md-4">
                 <img
-                  src="/public/wallpapermessi.avif"
+                  src="public/wallpapermessi.avif"
                   alt="Lionel Messi"
                   class="profile-img img-fluid mb-3"
                 />
@@ -132,7 +132,7 @@
               <div
                 class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
                 style="
-                  background-image: url('/public/jumbotron1.jpg');
+                  background-image: url('public/jumbotron1.jpg');
                   background-size: cover;
                 "
               >
@@ -151,7 +151,7 @@
               <div
                 class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
                 style="
-                  background-image: url('/public/jumbotron2.jpg');
+                  background-image: url('public/jumbotron2.jpg');
                   background-size: cover;
                 "
               >
@@ -168,7 +168,7 @@
               <div
                 class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
                 style="
-                  background-image: url('/public/jumbotron3.jpg');
+                  background-image: url('public/jumbotron3.jpg');
                   background-size: cover;
                 "
               >
@@ -187,7 +187,7 @@
               <div
                 class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
                 style="
-                  background-image: url('/public/jumbotron4.jpg');
+                  background-image: url('public/jumbotron4.jpg');
                   background-size: cover;
                 "
               >
@@ -204,7 +204,7 @@
               <div
                 class="bg-image p-5 text-center shadow-2-strong rounded mb-5 text-white"
                 style="
-                  background-image: url('/public/jumbotron6.jpg');
+                  background-image: url('public/jumbotron6.jpg');
                   background-size: cover;
                 "
               >
@@ -225,7 +225,7 @@
               <div
                 class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
                 style="
-                  background-image: url('/public/jumbotron7.jpg');
+                  background-image: url('public/jumbotron7.jpg');
                   background-size: cover;
                 "
               >
