--- a/form/form.html
+++ b/form/form.html
@@ -81,7 +81,7 @@
           <!-- Logo and Brand Name -->
           <a class="navbar-brand" href="index.html">
             <img
-              src="public/logo.png"
+              src="../public/logo.png"
               alt="Logo"
               width="90"
               height="70"
