--- a/table/table.html
+++ b/table/table.html
@@ -62,7 +62,7 @@
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img
-              src="public/logo.png"
+              src="../public/logo.png"
               alt="Logo"
               width="90"
               height="70"
