--- a/table/table.html
+++ b/table/table.html
@@ -106,7 +106,7 @@
     <div class="container my-5">
       <h2 class="text-center mb-4">Tabel Kritik dan Saran Pengguna</h2>
       <div class="table-container" itemscope itemtype="http://schema.org/Table">
-        <table class="table table-striped">
+        <table class="table table-striped h-card">
           <thead>
             <tr>
               <th>Nama</th>
